--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-BOT_TOKEN = 123456789:AATiuhBBy6oIL9r54yYLs7CSn
-FSUB = -1002235842999 -1001898719761
+BOT_TOKEN = 7696624765:AAGKcH0kKaoriQvvZqVWTNExKCsustGjIcw
+FSUB = -1002310978225
 ALLOW_PUBLIC = true
 PROTECT_CONTENT = true
 AUTO_DELETE = 10
-ADMINS = 123456789 1093541873
-LOG_CHANNEL = -1001898719761
+ADMINS = 7442532306
+LOG_CHANNEL = -1002456268841
 DISABLE_ADMIN_LOGS = true
