--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 BOT_TOKEN = 7696624765:AAGKcH0kKaoriQvvZqVWTNExKCsustGjIcw
-FSUB = -1002565241649 -1002428562251
+FSUB = -1002428562251
 ALLOW_PUBLIC = true
 PROTECT_CONTENT = true
 AUTO_DELETE = 10
